--- a/client/styles/customerinterface/ticket.css
+++ b/client/styles/customerinterface/ticket.css
@@ -17,13 +17,27 @@
     background-color: white ;
 }
 .leftPart{
-    position: fixed;
+    position: absolute;
     max-width: 50%;
     min-width: 150px;
-    max-height: 60%;
+    max-height: 100%;
     font-family:sans-serif;
     font-weight: lighter;
-    bottom: 3%;
+    bottom: 2%;
+    right: 3%;
+    background-color: rgba(156,156,156,.29);
+    border: 1px solid rgba(156,156,156,.29);
+
+}
+.leftPart{
+    position: absolute;
+    max-width: 50%;
+    min-width: 150px;
+    max-height: 100%;
+    font-family:sans-serif;
+    font-weight: lighter;
+    bottom: 2%;
+    right: 3%;
     background-color: rgba(156,156,156,.29);
     border: 1px solid rgba(156,156,156,.29);
 
@@ -31,4 +45,7 @@
 h1{
     font-weight: lighter;
     color: rgba(0,0,0,.5);
+}
+.card-call-center{
+    max-height: 50%;
 }
